--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Gloria Hallelujah', cursive;
     font-weight: 200;
     /*font-size: 16px;*/
     line-height: 1.5;
@@ -26,9 +26,15 @@ h3 {
 a {
     color: #fff;
     text-decoration: none;
+    font-family: 'Gloria Hallelujah', cursive;
 }
   
   .text-secondary {
     color: $secondary-color;
-}
+  }
+
+  .bio p {
+    //font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+  }
 
