--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,7 +1,45 @@
 #main-footer {
-  text-align: center;
   padding: 1rem;
   background: darken($primary-color, 10);
-  color: set-text-color($primary-color);
-  height: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  grid-row-gap: 1rem;
+
+  @include respond(phone){
+    grid-template-columns: 1fr;
+  }
+}
+.copy{
+  color: set-text-color($primary-color);  
+  font-size: 1.4rem;
+
+  @include respond(phone){
+      font-size: 1rem;
+  }
+}
+
+.icon-footer{
+  font-size: 1rem;
+  animation: moveInBottom 1.5s ease-out;
+
+  @include respond(phone){
+    font-size: .8rem;
+  }
+
+  & i{
+    border: 1.5px solid white;
+    border-radius: 50px;
+    padding:6px;
+  }
+}
+
+.icon-footer a, i {
+  &:hover {
+    border-color: $secondary-color;
+    color: $secondary-color;
+    @include easeOut();
+  }
 }
