--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -16,31 +16,26 @@
       @include easeOut;
   }
 
-  //Rotate into x with menu lines
+  // Rotate Into X With Menu Lines
   &.close {
-      transform: rotate(180deg);
+    transform: rotate(180deg);
 
-      .btn-line {
-          //Line 1 - rotate
-          &:nth-child(1) {
-            transform: rotate(46deg) translate(5px, 5px);
-            width: 14px;
-            height: 2.1px;
-            opacity: 0.8;
-            
-          }
-          //Line 2 - hide
-          &:nth-child(2) {
-              opacity:0;
-          }
-          //Line 3 - rotate
-          &:nth-child(3) {
-              transform: rotate(-45deg) translate(6.1px, -5.5px);
-              width: 14px;
-              height: 2.1px;
-              opacity: 0.8;
-            }
+    .btn-line {
+      // Line 1 - Rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
       }
+
+      // Line 2 - Hide
+      &:nth-child(2) {
+        opacity: 0;
+      }
+
+      // Line 3 - Rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+      }
+    }
   }
 }
 
