--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $primary-color-dark: #192F95;
 $secondary-color: #95D321;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
+$home-image-small: url(../img/background-small.jpg);
 $background-opacity: 0.9;
 
 // FONT
